--- a/web/src/index.css
+++ b/web/src/index.css
@@ -5,6 +5,7 @@
 
 body {
     font-size: 1.6rem;
+    overflow: hidden;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
